--- a/QLSV/nbproject/project.properties
+++ b/QLSV/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/QLSV.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.1.23-bin.jar=lib/mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.1.49.jar=lib/mysql-connector-java-5.1.49.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.jpa2-persistence.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.49.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
